--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+.x:hover
+{
+  
+  transform: scale(1.3);
+  transition: 0.4s ease-out;
+  /* background-color: skyblue; */
+  border: 2px solid orange;
+  border-radius: 2px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.x
+{
+    transition: 0.4s ease-in;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.y
+{
+    background-color:  rgb(156, 70, 20);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.z
+{
+    background-color: rgb(57, 57, 199);
+}
+.bod
+{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  background-color: #fae19d;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  align-items: center;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card{
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    transform: rotateY(180deg);
+    animation: 2s hideCard linear;
+    transition: transform 0.5s;
 }
+.containerm{
+    height: 700px;
+    width: 700px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 1em;
+  }
+  @keyframes hideCard{
+    0%, 70%{
+      transform: rotateY(0);
+    }
+    100%{
+      transform: rotateY(180deg);
+    }
+  }
+  .card .imgg{
+    max-width: 80%;
+    max-height: 80%;
+    transition: transform 0.5s;
+    transform: scale(0);
+    animation: 2s hideImage linear;
+  }
+  @keyframes hideImage{
+    0%, 70%{
+      transform: scale(1);
+    }
+    100%{
+      transform: scale(0);
+    }
+  }
+  
+  .card.active{
+    transform: rotateY(0);
+  }
+  .card.correct{
+    background-color: #65e469;
+  }
+  .card.wrong{
+    background-color: #fd245a;
+  }
+  .card.active .imgg{
+    transform: scale(1);
+  }
